load("@rules_proto//proto:defs.bzl", "proto_library")
load(
    "@com_google_googleapis_imports//:imports.bzl",
    "go_gapic_assembly_pkg",
    "go_gapic_library",
    "go_proto_library",
    "go_test",
    "proto_library_with_info",
)

# This is an API workspace, having public visibility by default makes perfect sense.
package(default_visibility = ["//visibility:public"])

exports_files(glob(["*.json"]))

proto_library(
    name = "oracolo_proto",
    srcs = [
        "oracolo.proto",
    ],
    deps = [
        "@com_google_googleapis//google/api:annotations_proto",
        "@com_google_googleapis//google/api:client_proto",
        "@com_google_googleapis//google/api:field_behavior_proto",
        "@com_google_googleapis//google/api:resource_proto",
        "@com_google_protobuf//:empty_proto",
    ],
)

proto_library_with_info(
    name = "oracolo_proto_with_info",
    deps = [
        ":oracolo_proto",
        "@com_google_googleapis//google/cloud:common_resources_proto",
    ],
)

##############################################################################
# Go
##############################################################################
go_proto_library(
    name = "oracolo_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/animeapis/go-genproto/oracolo/v1alpha1",
    protos = [":oracolo_proto"],
    deps = [
        "@go_googleapis//google/api:annotations_go_proto",
    ],
)

go_gapic_library(
    name = "oracolo_go_gapic",
    srcs = [":oracolo_proto_with_info"],
    grpc_service_config = "oracolo_grpc_service_config.json",
    importpath = "github.com/animeapis/api-go-client/oracolo/v1alpha1;oracolo",
    service_yaml = "oracolo_v1alpha1.yaml",
    metadata = True,
    deps = [
        ":oracolo_go_proto",
    ],
)

go_test(
    name = "oracolo_go_gapic_test",
    srcs = [":oracolo_go_gapic_srcjar_test"],
    embed = [":oracolo_go_gapic"],
    importpath = "github.com/animeapis/api-go-client/oracolo/v1alpha1",
)

# Open Source Packages
go_gapic_assembly_pkg(
    name = "gapi-oracolo-v1alpha1-go",
    deps = [
        ":oracolo_go_gapic",
        ":oracolo_go_gapic_srcjar-test.srcjar",
        ":oracolo_go_proto",
    ],
)
