load("@rules_proto//proto:defs.bzl", "proto_library")
load(
    "@com_google_googleapis_imports//:imports.bzl",
    "go_gapic_assembly_pkg",
    "go_gapic_library",
    "go_proto_library",
    "go_test",
    "proto_library_with_info",
)

# This is an API workspace, having public visibility by default makes perfect sense.
package(default_visibility = ["//visibility:public"])

exports_files(glob(["*.json"]))

proto_library(
    name = "resourcemanager_proto",
    srcs = [
        "resourcemanager.proto",
    ],
    deps = [
        "@com_google_googleapis//google/api:annotations_proto",
        "@com_google_googleapis//google/api:client_proto",
        "@com_google_googleapis//google/api:field_behavior_proto",
        "@com_google_googleapis//google/api:resource_proto",
        "@com_google_googleapis//google/longrunning:operations_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:field_mask_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

proto_library_with_info(
    name = "resourcemanager_proto_with_info",
    deps = [
        ":resourcemanager_proto",
        "@com_google_googleapis//google/cloud:common_resources_proto",
        "@com_google_googleapis//google/rpc:error_details_proto",
    ],
)

##############################################################################
# Go
##############################################################################
go_proto_library(
    name = "resourcemanager_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/animeapis/go-genproto/resourcemanager/v1alpha1",
    protos = [":resourcemanager_proto"],
    deps = [
        "@go_googleapis//google/api:annotations_go_proto",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
    ],
)

go_gapic_library(
    name = "resourcemanager_go_gapic",
    srcs = [":resourcemanager_proto_with_info"],
    grpc_service_config = "resourcemanager_grpc_service_config.json",
    importpath = "github.com/animeapis/api-go-client/resourcemanager/v1alpha1;resourcemanager",
    service_yaml = "resourcemanager_v1alpha1.yaml",
    metadata = True,
    deps = [
        ":resourcemanager_go_proto",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
        "@com_google_cloud_go//longrunning:go_default_library",
        "@com_google_cloud_go//longrunning/autogen:go_default_library",
    ],
)

go_test(
    name = "resourcemanager_go_gapic_test",
    srcs = [":resourcemanager_go_gapic_srcjar_test"],
    embed = [":resourcemanager_go_gapic"],
    importpath = "github.com/animeapis/api-go-client/resourcemanager/v1alpha1",
)

# Open Source Packages
go_gapic_assembly_pkg(
    name = "gapi-resourcemanager-v1alpha1-go",
    deps = [
        ":resourcemanager_go_gapic",
        ":resourcemanager_go_gapic_srcjar-test.srcjar",
        ":resourcemanager_go_proto",
    ],
)
